# motion-nova

./: .dockerignore  .gitignore  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260610_0001_initial_schema.py
backend/app/: main.py  mcp_server.py
backend/app/api/: deps.py  docs.py  router.py
backend/app/core/: audit.py  config.py  cookies.py  database.py  logging.py  request_context.py  security.py
backend/app/middleware/: csrf.py  request_context.py
backend/app/models/: __init__.py  booking.py  branch.py  expense.py  membership_plan.py  payment.py  subscription.py  user.py  visit.py  workout_class.py
backend/app/repositories/: booking_repository.py  branch_repository.py  expense_repository.py  membership_plan_repository.py  payment_repository.py  schedule_repository.py  subscription_repository.py  user_repository.py  visit_repository.py
backend/app/schemas/: analytics.py  auth.py  booking.py  branch.py  expense.py  membership_plan.py  payment.py  public.py  schedule.py  subscription.py  tools.py  user.py  visit.py
backend/app/scripts/: __init__.py  bootstrap_db.py  seed_demo.py
backend/app/services/: auth_service.py  (+13 more)
backend/scripts/: start-api.sh
backend/tests/: conftest.py  factories.py  test_analytics.py  test_branch_scope.py  test_expenses.py  test_health.py  test_mcp.py  test_schedule_booking.py  test_schemas.py  test_subscription_payment_report.py  test_user_service.py  test_visits.py
(+188 files in other folders)
