[tool.poetry]
name = "motion-nova-api"
version = "0.1.0"
description = "Motion Nova — backend API мережі спортивних залів"
authors = ["Vladyslav Kovaliov <kovalev.vladislav2005@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.137.1"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
sqlalchemy = "^2.0.51"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic-settings = "^2.14.1"
python-jose = "^3.5.0"
argon2-cffi = "^25.1.0"
redis = "^8.0.0"
email-validator = "^2.3.0"
python-dateutil = "^2.9.0.post0"
tzdata = "^2026.2"
mcp = {extras = ["cli"], version = "^1.27.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.0"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
httpx = "^0.28.1"
ruff = "^0.15.17"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
